--- a/doc/proyecto.tex
+++ b/doc/proyecto.tex
@@ -119,10 +119,10 @@
 	\input{secciones/06_implementacion}
 
 	% Resultados
-	%\input{secciones/07_results}
+	\input{secciones/07_results}
 
 	% Conclusiones y Trabajos futuros
-	%\input{secciones/08_conclusiones}
+	\input{secciones/08_conclusiones}
 
 	
 	\newpage
