--- a/doc/secciones/08_conclusiones.tex
+++ b/doc/secciones/08_conclusiones.tex
@@ -4,14 +4,20 @@ We have presented the design, implementation, and results of Name\_Of\_Project; 
 
 Name\_Of\_Project also provides an extensible design and compatibility with the \textit{eaopt} library \cite{eaopt}. While many evolutionary algorithms libraries only support the classic mutation and crossover operators out of the box, this project enables the user of the library to use as many custom operators as desired while allowing they to use all the already existing mutation and crossover operators from the \textit{eaopt} library.
 
-The proposed distributed hybrid pool-island evolutionary model looks like a promising model for problems where the evaluation operator is computationally expensive, problems that requires high exploratory capabilities, and for multi-objective problems where several features of a solution have to be optimized. In the last case, several clusters can be created where nodes from each cluster will apply genetic operators that modifies a specific gene of the solution representation.
+The proposed distributed hybrid pool-island evolutionary model looks like a promising model for problems where the evaluation operator is computationally expensive, problems that requires high exploratory capabilities, and for multi-objective problems where several parameters of a solution have to be optimized. In the last case, several clusters can be created where nodes from each cluster will apply genetic operators that modifies a specific gene of the solution representation.
 
-Even though the use of experimental features from Go's Web Assembly support led us to unexpected constraints and challenges during the development of the project, we were able to address them them by looking for alternatives such as the web-sockets listener to serve gRPC requests for browser-based clients. As the Web Assembly support for Golang increases, the performance achieved by this project will increase without having to change much of its code-base.
+Even though the use of experimental features from Go's Web Assembly support led us to unexpected constraints and challenges during the development of the project, we were able to address them by looking for alternatives such as the web-sockets listener to serve gRPC requests for browser-based clients. As the Web Assembly support for Golang increases, the performance achieved by this project will increase without having to change much of its code-base.
 
+Of course, Name\_Of\_Project has plenty of room for improvements, and we would like to mention some of them. With regard to the genetic operators that are applied over an island in our design, new selection methods can be implemented so the user of the library has the ability to choose other than the tournament of k individuals. Also, it would be nice to enable the user of the library to decide which operators do the clients apply, so they do not just evaluate individuals from a pool. 
 
+With regard to the current client implementation, it could be interesting to design a mechanism where clients in the same network can collaborate between each other like on a cellular distributed evolutionary model. 
 
-\paragraph*{Future Work}. This project can be extended to ...
+Also, having support for Android devices would increase the number of potential collaborators in our platform. note that since we are using Protocol Buffers, exchange of information between the Android and the current implementation should be trivial. 
 
+Besides, even though by having browser support we achieved zero installation requirements for collaborators, at cost of installation requirements, a web extension would increase the chances of a collaborator to start collaborating again every time they open their browser.
 
+The user experience for browser-based collaborators can be further improved. While with the current implementation the user only gets feedback about their self and the island he is evaluating individuals from, displaying a ranking of collaborators in terms of the total number of evaluated individuals could improve user engagement by introducing some competition between collaborators. 
 
-All in all, this work was not only a research project, but also a great opportunity to work on distributed systems and artificial intelligence; two of the fields of Computer Science that excite me the most. Furthermore, it was also an opportunity to work with really talented people, and to apply many of my engineering capabilities acquired in these four years at University and developing my own side-projects.
+Moreover, to increase the chances of new users using our platform, it could be interesting to have a catalog where researchers can share their clusters and where collaborators can look for problems they might be willing to collaborate to.
+
+All in all, this work was not only a research project but also a great opportunity to work on distributed systems and artificial intelligence; two of the fields of Computer Science that inspire me the most. Furthermore, it was also an opportunity to work with really talented people, and to apply many of my engineering capabilities acquired in these four years at University and developing my side-projects.
