--- a/doc/secciones/08_conclusiones.tex
+++ b/doc/secciones/08_conclusiones.tex
@@ -18,6 +18,6 @@ Besides, even though by having browser support we achieved zero installation req
 
 The user experience for browser-based collaborators can be further improved. While with the current implementation the user only gets feedback about their self and the island he is evaluating individuals from, displaying a ranking of collaborators in terms of the total number of evaluated individuals could improve user engagement by introducing some competition between collaborators. 
 
-Moreover, to increase the chances of new users using our platform, it could be interesting to have a catalog where researchers can share their clusters and where collaborators can look for problems they might be willing to collaborate to.
+As stated in the previous chapter, to increase the chances of new users using our platform, it could be interesting to have a catalog where researchers can share their clusters and where collaborators can look for problems they might be willing to collaborate to.
 
 All in all, this work was not only a research project but also a great opportunity to work on distributed systems and artificial intelligence; two of the fields of Computer Science that inspire me the most. Furthermore, it was also an opportunity to work with really talented people, and to apply many of my engineering capabilities acquired in these four years at University and developing my side-projects.
