--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -650,3 +650,8 @@ month={June},}
 	title        = {Prometheus Overview},
 	howpublished = {\url{https://prometheus.io/docs/introduction/overview/}}
 }
+
+@misc{go-architectures,
+	title        = {List of supported Operative Systems and Architectures on Go},
+	howpublished = {\url{https://golang.org/doc/install/source#environment}}
+}
