--- a/doc/secciones/04_planificacion.tex
+++ b/doc/secciones/04_planificacion.tex
@@ -97,10 +97,9 @@ As previously stated, it is indispensable for a platform to be tested from its u
 	\item Is 43, works as Researcher at the University of British Columbia.
 \end{itemize}
 } \\
-&portarit
+&
 \textbf{Goals} 
 \begin{itemize}
-	\item Wants to be able to upload my problem to a platform where users can collaborate to it. 
 	\item Wants to have a common representation for her problem information so she does not need to create a different representation for each type of machine collaborating.
 	\item Wants an interface to exchange information between collaborating machines so that she does not need to know how the underlying communication protocol works.
 \end{itemize}   
@@ -127,6 +126,8 @@ As previously stated, it is indispensable for a platform to be tested from its u
 \textbf{Goals} 
 \begin{itemize}
 	\item Wants all the functions of the system tested so she knows that her contributions does not break the system.
+	
+	\item Wants to collaborate on a scientific problem from her computer but want to have more control over the execution of the program.
 \end{itemize}   
 \end{tabular}
 \end{table}
@@ -151,7 +152,6 @@ As previously stated, it is indispensable for a platform to be tested from its u
 \textbf{Goals} 
 \begin{itemize}
 	\item Wants to start contributing to a scientific problem from his browser so that he does not need to install anything on his computer.
-	\item Wants to be able to select which project he wants to contribute to so that he can collaborate in something he is interested in.
 \end{itemize}   
 \end{tabular}
 \end{table}
