--- a/doc/proyecto.tex
+++ b/doc/proyecto.tex
@@ -23,6 +23,7 @@
 \usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{tabularx}
+\usepackage{tabu} % thicker lines on tables
 \usepackage{booktabs}
 \usepackage{wrapfig} % Wrap images with text
 \usepackage{subcaption}
