--- a/doc/secciones/07_results.tex
+++ b/doc/secciones/07_results.tex
@@ -84,42 +84,92 @@ On the other hand, even if the population is big enough to avoid the situation d
 
 Fault-tolerance on a distributed system is another big challenge when working with ephemeral nodes that you do not control and are likely to stop working without previous notice nor troubleshooting options. Whereas by using a decentralized approach we achieve high reliability avoiding single point of failures on our system, there are other challenges to be addressed.
 
-One the one hand, all nodes in the system must be able to reliably detect other faulty nodes to avoid expending time trying to communicate with them. This is achieved on Project\_Name by using a gossip protocol that detects node-failures and spread that information on a bounded amount of time and with low bandwidth usage.
+One the one hand, all nodes in the system must be able to reliably detect other faulty nodes to avoid expending time trying to communicate with them. This is achieved on Project\_Name by using a gossip protocol that detects node-failures and spread that information with low bandwidth usage and bounded time as it can be seen on Figure \ref{fig:failure_discovery_chart} and Table \ref{tab:failure_discovery_table}.
 
-\textbf{Node Failure experiment here - How much time does it take to detect a node failure depending on the number of nodes?}
+\begin{figure}[h!]
+		\centering
+    	\includegraphics[width=\linewidth]{assets/images/Failure-detection-time.png}
+    	\caption{\textbf{Failure detection times} depending on the number of nodes in the cluster. As it can be seen, time is bounded}
+    	\label{fig:failure_discovery_chart}
+\end{figure}
 
-On the other hand, on a hypothetical scenario where nodes do not share the best solutions they find, if the node that has the best individual so far within the entire system fails, that solution will be lost and it is very unlikely to be recover. By using the migration mechanism periodically and gossiping every individual that replaces the best one known so far on a node, our proposed design aims to avoid this scenario with eventual consistency.
+\begin{table}[h!]
+\centering
+\begin{tabular}{l|l|l|llll}
+\cline{2-3}
+                                     & \multicolumn{2}{c|}{\textbf{Time (seconds)}} &                       &                                       & \multicolumn{2}{c}{\textbf{}}                                                  \\ \cline{1-3} \cline{6-7} 
+\multicolumn{1}{|l|}{\textbf{Nodes}} & \textbf{All}     & \textbf{At least one}     &                       & \multicolumn{1}{r|}{\textbf{}}        & \multicolumn{1}{l|}{\textbf{All}} & \multicolumn{1}{l|}{\textbf{At least one}} \\ \cline{1-3} \cline{5-7} 
+\multicolumn{1}{|l|}{2}              & 50               & 50                        & \multicolumn{1}{l|}{} & \multicolumn{1}{r|}{\textbf{Average}} & \multicolumn{1}{l|}{47,8}         & \multicolumn{1}{l|}{47,2}                  \\ \cline{1-3} \cline{5-7} 
+\multicolumn{1}{|l|}{4}              & 38               & 38                        & \multicolumn{1}{l|}{} & \multicolumn{1}{l|}{\textbf{Std}}     & \multicolumn{1}{l|}{7,69}         & \multicolumn{1}{l|}{7,46}                  \\ \cline{1-3} \cline{5-7} 
+\multicolumn{1}{|l|}{8}              & 57               & 56                        &                       &                                       &                                   &                                            \\ \cline{1-3}
+\multicolumn{1}{|l|}{16}             & 42               & 41                        &                       &                                       &                                   &                                            \\ \cline{1-3}
+\multicolumn{1}{|l|}{32}             & 52               & 51                        &                       &                                       &                                   &                                            \\ \cline{1-3}
+\end{tabular}
+\caption{Raw data for failure detection times of Figure \ref{fig:failure_discovery_chart}.}
+\label{tab:failure_discovery_table}
+\end{table}
 
-\textbf{Gossiping experiment here - How much time does it take to every (and just other node) node to know about the best solution found depending on the number of nodes?}
+On the other hand, on a hypothetical scenario where nodes do not share the best solutions they find, if the node that has the best individual so far within the entire system fails, that solution will be lost and it is very unlikely to be recovered. By using the migration mechanism periodically and gossiping every individual that replaces the best one known so far on a node, our proposed design aims to avoid this scenario with eventual consistency.
 
+To demonstrate this, we designed an experiment with a cluster of $N$ nodes where only one of them is having their individuals evaluated. We measured the time it takes for at least one other node, half of the nodes, 80\% of the nodes, and all the nodes, to receive a gossiped broadcast about an new best individual. The results, that can be found on Figure \ref{fig:broadcast_experiment} and Table \ref{tab:boadcast_experiment}, confirm that not only eventual consistency is met, but also most of the nodes receive the broadcast on a time that slowly increases with respect of the total number of nodes on the system. Note that even though it takes longer to broadcast an individual to all nodes, once most of them have received the broadcast, that information is unlikely to be lost.  Moreover, the time needed is likely to be smaller since on that experiment we deactivated migrations due to its selection method.
 
+\begin{figure}[h!]
+		\centering
+    	\includegraphics[width=\linewidth]{assets/images/broadcast-experiment.png}
+    	\caption{\textbf{Broadcast times} depending on the number of nodes in the cluster. As it can be seen, Most of the nodes receive a broadcast on a time that slowly increases with respect of the total number of nodes.}
+    	\label{fig:broadcast_experiment}
+\end{figure}
 
+\begin{table}[h!]
+\centering
+\begin{tabular}{l|l|l|l|l}
+\cline{2-5}
+                                     & \multicolumn{4}{c|}{\textbf{Time (seconds)}}                                                            \\ \hline
+\multicolumn{1}{|l|}{\textbf{Nodes}} & \textbf{All} & \textbf{80\% of them} & \textbf{Half of them} & \multicolumn{1}{r|}{\textbf{At least one}} \\ \hline
+\multicolumn{1}{|l|}{2}              & 0            & 0                    & 0                     & \multicolumn{1}{l|}{0}                    \\ \hline
+\multicolumn{1}{|l|}{4}              & 0            & 0                    & 0                     & \multicolumn{1}{l|}{0}                    \\ \hline
+\multicolumn{1}{|l|}{8}              & 15           & 10                   & 1                     & \multicolumn{1}{l|}{0}                    \\ \hline
+\multicolumn{1}{|l|}{16}             & 22           & 14                   & 1                     & \multicolumn{1}{l|}{0}                    \\ \hline
+\multicolumn{1}{|l|}{32}             & 72           & 25                   & 17                    & \multicolumn{1}{l|}{0}                    \\ \hline
+\end{tabular}
+\caption{Raw data for the broadcast times experiment of Figure \ref{fig:broadcast_experiment}.}
+\label{tab:boadcast_experiment}
+\end{table}
 
-Where am I in the CAP theorem?
-
-\paragraph*{Heterogeneous Nodes}
-\begin{itemize}
-	\item Multi-Platform Code - list of supported go architectures and WASM
-	\item Slower nodes do not relatize other nodes since individuals are evaluated asynchronously.
-\end{itemize}
-
-\paragraph*{Fault-tolerance}
-\begin{itemize}
-	\item Decentralized design - no single point of failure
-	\item Partition tolerance - example of nodes running on different sub-nets (use Hamid's tool?).
-\end{itemize}
-
-\paragraph*{Ephemeral Nodes}
-\begin{itemize}
-	\item Failure detection system - detect failing nodes with low band-wight usage and decentralized way.
-	\item Nodes join system - How easy is it? how reliable is it? - How easy is to create a new cluster?
-\end{itemize}
-
-Final discussion about the achievement of this objective
-
+In conclusion, our system supports multiple operative systems and architectures, avoiding bottlenecks due to slower processors. Also, It provides a decentralized mechanism to achieve consistency and node failure detection that scales well with the number of nodes in the cluster.
 
 
 \section{Objective 3. Achieve higher performance level than a non-distributed implementation}
+
+\begin{figure}[h!]
+		\centering
+    	\includegraphics[width=\linewidth]{assets/images/experiment-evaluations-second.png}
+    	\caption{\textbf{Evaluation performance.} The throughput in terms of evaluated individuals per second, seems to have linear performance gain with the number of clients.}
+    	\label{fig:evaluations_experiment}
+\end{figure}
+
+\begin{table}[h!]
+\begin{tabular}{|l|l|lll}
+\cline{1-2}
+\multicolumn{2}{|c|}{\textbf{Distributed model}}                          &           &                       & \textbf{}                                             \\ \cline{1-2}
+\textbf{Clients} & \multicolumn{1}{c|}{\textbf{Throughput (Evals / Sec)}} &           &                       & \textbf{}                                             \\ \cline{1-2} \cline{5-5} 
+1                & 14                                                     & \textbf{} & \multicolumn{1}{l|}{} & \multicolumn{1}{l|}{\textbf{Sequential model}}        \\ \cline{1-2} \cline{5-5} 
+2                & 23                                                     &           & \multicolumn{1}{l|}{} & \multicolumn{1}{l|}{\textbf{Throughput (Evals /Sec)}} \\ \cline{1-2} \cline{5-5} 
+4                & 41                                                     &           & \multicolumn{1}{l|}{} & \multicolumn{1}{l|}{17}                               \\ \cline{1-2} \cline{5-5} 
+8                & 59                                                     &           &                       &                                                       \\ \cline{1-2}
+16               & 72                                                     &           &                       &                                                       \\ \cline{1-2}
+\end{tabular}
+\caption{Raw data for the throughput experiment experiment of Figure \ref{fig:evaluations_experiment}.}
+\label{tab:evaluations_experiment}
+\end{table}
+
+
+Mention that we can see the penaly of the communication latency on the throughput with just one client but from 2 clients one we gain in performance on a linear way.
+
+Mention that there can be performance degradation with the 16 clients experiment since we are running the experiment on a single machine and therefore CPU time is shared between processes.
+
+Mention that this can be further improved by using batching of individuals.
+
 
 \paragraph*{Evaluations Throughput.} Number of evaluations per second - chart of evaluations per second vs number of clients
 \paragraph*{Exploratory capabilities?}
