--- a/doc/secciones/06_implementacion.tex
+++ b/doc/secciones/06_implementacion.tex
@@ -720,3 +720,10 @@ ok  	_/home/salva/Documents	0.001s
 The code of the prototype developed for the last milestone comes with 100 unit test that covers the implementations for the decentralized system, the genetic algorithm and its operators, and the multilayer perceptron.
 
 We have used Travis CI for the continuous integration of our project. Every time a commit is pushed to a branch on the Github repository with an open pull request to master, Travis executes all tests every time a new Pull Request is created in order to confirm that all modifications pass the tests. This is indeed needed given the fact that this is an open source project and everyone is welcome and encouraged to contribute.
+
+\begin{figure}[h!]
+		\centering
+    	\includegraphics[scale=0.4]{assets/images/travis_example.png}
+    	\caption{Failing tests on a branch with an open pull request to master. It modifies a function of the system causing it to fail.}
+    	\label{fig:travis}
+\end{figure}
