--- a/doc/secciones/07_results.tex
+++ b/doc/secciones/07_results.tex
@@ -170,6 +170,8 @@ Mention that there can be performance degradation with the 16 clients experiment
 
 Mention that this can be further improved by using batching of individuals.
 
+Mention that we have disables the training operator since it was a bottleneck on the experiment and could be interesting to run it on the client although we currently do not support other operators apart from the evaluation on the client
+
 
 \paragraph*{Evaluations Throughput.} Number of evaluations per second - chart of evaluations per second vs number of clients
 \paragraph*{Exploratory capabilities?}
